<resources>
    <string name="app_name">ODIM</string>
    <string name="accessibility_service_label">ODIM Service</string>
    <string name="accessibility_service_description">ODIM records your gestures, screens, traces</string>
    <string name="cover">Cover</string>
    <string name="time_stamp">Time Stamp</string>
    <string name="event_function">Event Function</string>
    <string name="event_index">Index</string>
    <string name="upload_trace_button_text">Upload Trace</string>
    <string name="upload_all_toast_success">All event data uploaded</string>
    <string name="upload_fail">Upload Interaction Failed</string>
    <string name="appNameStringSize">20sp</string>
    <string name="MainTextHeader">Apps</string>
    <string name="traceNumScreens">%1$d Screens</string>
    <string name="redact_input_hint">Label for type of content redacted</string>
    <string name="placeholder_trace_name">TRACE</string>
    <string name="edit_btn_text">Edit Name</string>
    <string name="chevron_content_desc">
        Chevron icon indicating there is further information about the trace once selection is clicked.
    </string>
    <string name="trace_name_hint">Trace Name</string>
    <string name="worker_id_placeholder">Worker Id</string>
    <string name="split_trace_label">
        Are you sure you want to split these screens to a new trace? This will permanently remove the screens from the trace.
    </string>
    <string name="dialog_delete_screens_message">
        Are you sure you want to delete these screens from the trace? This will permanently remove all data and metadata from these captures.
    </string>
    <string name="trace_content_desc">Icon of app of current traces page</string>
    <string name="app_name_placeholder">App Name</string>
    <string name="trace_upload_title">Add Trace Description</string>
    <string name="upload_trace_hint">Add a description for your trace</string>
    <string name="worker_id_input_hint">Give worker id for your traces</string>
    <string name="question_mark_icon">The gesture for this screen is unknown</string>
    <string name="incomplete_screen_content_desc">Incomplete screen lacking gesture</string>
    <string name="gesture_confirm_message">Do you confirm this is the correct element?</string>
    <string name="define_gesture_message">What type of interaction was done on this screen?</string>
    <string name="define_click_message">Click</string>
    <string name="define_long_click_message">Long Press</string>
    <string name="define_scroll_message">Scroll</string>
    <string name="gesture_scroll_message">What was the scroll action direction?</string>
    <string name="gesture_scroll_vertical">Vertical</string>
    <string name="gesture_scroll_horizontal">Horizontal</string>
    <string name="type_view_click">TYPE_VIEW_CLICKED</string>
    <string name="type_view_long_click">TYPE_VIEW_LONG_CLICKED</string>
    <string name="type_view_scroll">TYPE_VIEW_SCROLLED</string>
    <string name="type_unknown">TYPE_VIEW_UNKNOWN</string>
    <string name="delete_screens_icon_title">Delete</string>
    <string name="edit_gesture_icon_title">Edit Gesture</string>
    <string name="split_trace_icon_title">Split to New Trace</string>
    <string name="rename_trace_text_hint">Name the task for the trace</string>
    <string name="vh_dialog_title">View Hierarchy Items</string>
    <string name="vh_item_text_label">Text: </string>
    <string name="vh_item_content_desc_label">Content Desc: </string>
    <string name="app_icon_content_desc">App icon of recorded app.</string>
    <string name="chevron_icon_content_desc">Pointer to indicate navigate to next screen.</string>
    <string name="delete_app_dialog_message">
        Are you sure you want to delete these apps? You will remove the every trace recorded in them.
    </string>
    <string name="delete_app_dialog_title">Delete app</string>
    <string name="dialog_positive">Yes</string>
    <string name="dialog_negative">No</string>
    <string name="dialog_delete_trace_message">
        Are you sure you want to delete this trace recording? You will remove the entire trace, including all screens, view hierarchies, and gestures.
    </string>
    <string name="dialog_delete_trace_title">Delete trace</string>
    <string name="options_bar_text_num">Total: %1$d</string>
    <string name="dialog_split_trace_title">Split Trace</string>
    <string name="dialog_delete_screens_title">Delete Screens</string>
    <string name="dialog_close">CLOSE</string>
    <string name="dialog_upload_trace_positive">UPLOAD</string>
    <string name="dialog_upload_trace_title">Upload Trace</string>
    <string name="activity_screenshot_title">ScreenShot (Click Image for VH)</string>
    <string name="dialog_text_redact_message">
        Are you sure you want to redact the text? This will only redact metadata, not the visual screen.\ntext: %1$s
    </string>
    <string name="dialog_text_redact_positive">Redact</string>
    <string name="redact_text_val">text redacted.</string>
    <string name="redact_desc_val">description redacted.</string>
    <string name="dialog_save_gesture_title">Confirm Gesture</string>
    <string name="dialog_save_gesture_positive">SAVE</string>
    <string name="dialog_edit_redact_title">Set Label</string>
    <string name="dialog_done">DONE</string>
    <string name="dialog_label_redact_title">Set Redact Label</string>
    <string name="vh_list_redact_fab_desc">Floating Action Button to redact view hierarchy text metadata</string>
    <string name="secondary_redact_fab_desc">Floating Action Button that toggles redact draw/erase mode</string>
    <string name="save_redact_fab_desc">Floating Action button to save visual redactions</string>
    <string name="placeholder_trace_task">Trace task description</string>
    <string name="placeholder_trace_no_task">No task found for trace</string>
    <string name="init_upload_progress_text">0 / 0 uploaded</string>
    <string name="upload_progress_text">%1$d / %2$d uploaded</string>
    <string name="type_agent">TYPE_AGENT_ACTION</string>
    <string name="vh_editable_field">Is Editable Field</string>
</resources>