<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_confirm_gesture_root"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/dialog_confirm_gesture_title"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textStyle="bold"
        android:text="@string/gesture_confirm_message"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingBottom="20dp"/>

    <RadioGroup
        android:id="@+id/scroll_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible">
        <TextView
            android:id="@+id/scroll_radio_button_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gesture_scroll_message" />
        <RadioButton
            android:id="@+id/scroll_radio_button_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gesture_scroll_horizontal" />
        <RadioButton
            android:id="@+id/scroll_radio_button_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gesture_scroll_vertical" />
    </RadioGroup>




</LinearLayout>