<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:paddingStart="10dp"
    android:paddingEnd="5dp"
    android:clickable="true" >

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/app_icon_content_desc"
        android:padding="1dp"
        android:scaleType="centerInside"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@mipmap/ic_launcher"
        android:clickable="false" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/appNameStringSize"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/app_icon"
        app:layout_constraintRight_toLeftOf="@+id/main_chevron_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        android:clickable="false" />

    <ImageView
        android:id="@+id/main_chevron_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/chevron_icon_content_desc"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/ic_baseline_chevron"
        android:clickable="false" />


</androidx.constraintlayout.widget.ConstraintLayout>